# AlgorithmDTOsWP4T1

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/mermaid_charts/: centralized_dispatch_benefit_allocation_dto.md  centralized_dispatch_cems_dto.md  centralized_dispatch_p2p_dto.md  commons_dispatch_optimization_dto.md  commons_dto.md  commons_energy_management_system_dto.md  convert_svg.sh  create_mmd.py  energy_management_system_collective_benefit_allocation_dto.md  energy_management_system_community_dto.md  energy_management_system_individual_portfolio_dto.md  energy_management_system_p2p_dto.md  heuristic_benefit_allocation_dto.md  heuristic_settlement_dto.md  individual_portfolio_optimisation_dto.md  market_clearing_dto.md  pricing_mechanism_dto.md  pricing_model_dto.md
doc/openapi/: generate_openapi.sh  u2demo-optimization-doc.html  u2demo_optimization_api.json
u2demo_clearing_engine/: app.py
u2demo_clearing_engine/dto/: a_1_1_centralized_dispatch_cems_dto.py  a_1_1_energy_management_system_community_dto.py  a_1_2_centralized_dispatch_peer_to_peer_dto.py  a_1_2_energy_management_system_peer_to_peer_dto.py  a_1_3_centralized_dispatch_collective_benefit_allocation_dto.py  a_1_3_energy_management_system_collective_benefit_allocation_dto.py  a_1_4_decision_individual_portfolio_optimization_dto.py  a_1_4_energy_management_system_individual_portfolio_dto.py  a_2_centralized_market_clearing_dto.py  a_2_centralized_market_clearing_pricing_model_dto.py  a_3_pricing_mechanism_dto.py  a_3_pricing_model_dto.py  a_4_1_decision_individual_portfolio_optimization_dto.py  a_4_2_decision_individual_bidding_dto.py  a_4_heuristic_benefit_allocation_dto.py  a_4_heuristic_settlement_dto.py
u2demo_clearing_engine/dto/algorithm_libraries/: commons_dispatch_optimization_dto.py  commons_dto.py  commons_energy_management_system_dto.py
